Add 7pak to runners, make case statement to be multiline.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,17 @@ make:
     - master
     - merge_request
   script:
-    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;; "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;; "c_6pak_48cpu_128RAM_4TB_docker") echo "45" ;; "y_6pak_48cpu_128RAM_4TB_docker") echo "45" ;; "yade-runner") echo "12" ;; "yade-runner-01") echo "1" ;; *) echo "3";; esac)
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in 
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;; 
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;; 
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "45" ;; 
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "45" ;; 
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "45" ;; 
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "45" ;; 
+        "yade-runner") echo "12" ;; 
+        "yade-runner-01") echo "1" ;; 
+        *) echo "3";;
+        esac)
     - echo $JOBSNUM
     - cd build
     - make -j $JOBSNUM
