--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -98,7 +98,8 @@ if opts.test:
 	try:
 		result=yade.tests.testAll()
 	except:
-		print(20*'*'+' UNEXPECTED EXCEPTION WHILE RUNNING TESTS '+20*'*')
+		# https://misc.flogisoft.com/bash/tip_colors_and_formatting
+		print('\033[91m'+20*'*'+' UNEXPECTED EXCEPTION WHILE RUNNING TESTS '+20*'*'+'\033[0m')
 		print(20*'*'+' '+str(sys.exc_info()[0]))
 		print(20*'*'+" Please report bug at https://gitlab.com/yade-dev/trunk/issues providing the following traceback:")
 		import traceback; traceback.print_exc()
@@ -107,10 +108,10 @@ if opts.test:
 	if (os.path.exists('./DirSearchYade')): os.remove('./DirSearchYade')
 	if (os.path.exists('./MicroMacroAnalysis')): os.remove('./MicroMacroAnalysis')
 	if result.wasSuccessful():
-		print("*** ALL TESTS PASSED ***")
+		print('\033[92m'+"*** ALL TESTS PASSED ***"+'\033[0m')
 		sys.exit(0)
 	else:
-		print(20*'*'+' SOME TESTS FAILED '+20*'*')
+		print('\033[91m'+20*'*'+' SOME TESTS FAILED '+20*'*'+'\033[0m')
 		sys.exit(1)
 
 if not 'OpenMP' in features and (opts.cores or (opts.threads and opts.threads>1)):
