--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
-#image: registry.gitlab.com/yade-dev/docker-yade
-image: registry.gitlab.com/remche/docker-yade
+image: registry.gitlab.com/yade-dev/docker-yade
 
 stages:
   - cmake
@@ -14,10 +13,8 @@ cmake:
     - master
     - merge_request
   script:
-    - apt-get update
-    - apt-get install -y python-bibtexparser python3-future python-future
     - mkdir build && cd build
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=2 -DDISABLE_SAVE_TEMPS=1 ..
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
   tags:
   - lightweight
   artifacts:
@@ -30,8 +27,6 @@ make:
     - master
     - merge_request
   script:
-    - apt-get update
-    - apt-get install -y python-bibtexparser python3-future python-future
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in "y_4pak_64cpu_256RAM_4TB_docker") echo "40" ;; "c_4pak_64cpu_256RAM_4TB_docker") echo "40" ;; "c_6pak_48cpu_128RAM_4TB_docker") echo "42" ;; "y_6pak_48cpu_128RAM_4TB_docker") echo "42" ;; "yade-runner") echo "12" ;; "yade-runner-01") echo "1" ;; *) echo "40";; esac)
     - echo $JOBSNUM
     - cd build
@@ -50,8 +45,6 @@ test:
     - master
     - merge_request
   script:
-    - apt-get update
-    - apt-get install -y python-bibtexparser python3-future python-future
     - install/bin/yade-ci --test
   tags:
   - lightweight
@@ -64,8 +57,6 @@ check:
     - master
     - merge_request
   script:
-    - apt-get update
-    - apt-get install -y python-bibtexparser python3-future python-future
     - install/bin/yade-ci --checks
   tags:
   - lightweight
@@ -78,8 +69,6 @@ doc:
     - master
     - merge_request
   script:
-    - apt-get update
-    - apt-get install -y python-bibtexparser python3-future python-future
     - cd build
     - xvfb-run -s "-screen 0 1600x1200x24" make doc
   dependencies:
