--- a/py/libVersions.py.in
+++ b/py/libVersions.py.in
@@ -21,12 +21,45 @@ def allVersionsCmake():
 
 	"""
 
-	return {
-		  "cmake" : [ (${CMAKE_MAJOR_VERSION}, ${CMAKE_MINOR_VERSION}, ${CMAKE_PATCH_VERSION})   , '${CMAKE_VERSION}' ]
-		, "vtk"   : [ (${VTK_MAJOR_VERSION}  , ${VTK_MINOR_VERSION}  , ${VTK_PATCH_VERSION})     , '${VTK_VERSION}'   ]
-# uncomment when this bug is fixed in upstream: https://github.com/CGAL/cgal/issues/2820
-#		, "cgal"  : [ (${CGAL_MAJOR_VERSION},${CGAL_MINOR_VERSION},${CGAL_BUGFIX_VERSION})   , '${CGAL_VERSION}'  ]
-		}
+	ret={}
+	def addVer(name,v1,v2,v3,ver):
+		try:
+			ret.update({ name : [ ( int(v1) , int(v2) , int(v3) ) , ver ]})
+		except:
+			pass
+	# 0.cmake
+	addVer("cmake",'${CMAKE_MAJOR_VERSION}','${CMAKE_MINOR_VERSION}','${CMAKE_PATCH_VERSION}','${CMAKE_VERSION}')
+	# 1. compiler
+	try:
+		addVer("gcc"  ,'${CMAKE_CXX_COMPILER_VERSION}'.split('.')[0],'${CMAKE_CXX_COMPILER_VERSION}'.split('.')[1],'${CMAKE_CXX_COMPILER_VERSION}'.split('.')[2],'${CMAKE_CXX_COMPILER_VERSION}')
+	except:
+		pass
+	addVer("clang",'${CLANG_VERSION_MAJOR}','${CLANG_VERSION_MINOR}','${CLANG_VERSION_PATCHLEVEL}','${CLANG_VERSION}')
+	# 2. boost
+	addVer("boost",'${Boost_MAJOR_VERSION}','${Boost_MINOR_VERSION}','${Boost_SUBMINOR_VERSION}','${Boost_VERSION}')
+	# 3. qt
+	addVer("qt"   ,'${QT_VERSION_MAJOR}','${QT_VERSION_MINOR}','${QT_VERSION_PATCH}','${QT_VERSION_MAJOR}.${QT_VERSION_MINOR}.${QT_VERSION_PATCH}')
+	# 4. freeglut   - I don't know how to detect it
+	# 5. qglviewer  - I don't know how to detect it
+	# 6. python
+	addVer("python",'${PYTHON_VERSION_MAJOR}','${PYTHON_VERSION_MINOR}','${PYTHON_VERSION_PATCH}','${PYTHON_VERSION_STRING}')
+	# 7. matplotlib - I don't know how to detect it
+	# 8. eigen
+	addVer("eigen" ,'${Eigen3_FIND_VERSION_MAJOR}','${Eigen3_FIND_VERSION_MINOR}','${Eigen3_FIND_VERSION_PATCH}','${Eigen3_FIND_VERSION}')
+	# 9. gdb        - I don't know how to detect it
+	# 10. sqlite3   - I don't know how to detect it
+	# 11. loki      - I don't know how to detect it
+	# 12. vtk
+	addVer("vtk"   ,'${VTK_MAJOR_VERSION}','${VTK_MINOR_VERSION}','${VTK_BUILD_VERSION}','${VTK_VERSION}')
+	# 13. cgal
+	addVer("cgal"  ,'${CGAL_MAJOR_VERSION}','${CGAL_MINOR_VERSION}','${CGAL_BUGFIX_VERSION}','${CGAL_VERSION}')
+	# 14. suitesparse
+	addVer("suitesparse",'${SUITESPARSE_MAIN_VERSION}','${SUITESPARSE_SUB_VERSION}','${SUITESPARSE_SUBSUB_VERSION}','${SUITESPARSE_VERSION}')
+	# 15. openblas  - I don't know how to detect it
+	# 16. metis     - I don't know how to detect it
+	# 17. mpi
+	addVer("mpi"   ,'${MPI_CXX_VERSION_MAJOR}','${OMPI_CXX_VERSION_MINOR}','${MPI_VERSION}', '${OMPI_VERSION}')
+	return ret
 
 def printAllVersions(rstFormat=False):
 	"""
