--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,7 +363,7 @@ IF(ENABLE_LINSOLV)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CGAL_DEFINITIONS} -DLINSOLV -DFLOW_ENGINE")
 
     SET(LINKLIBS  "${LINKLIBS};${CHOLMOD_LIBRARIES};${AMD_LIBRARY};${CAMD_LIBRARY};${COLAMD_LIBRARY};${CCOLAMD_LIBRARY};${OPENBLAS_LIBRARY};${METIS_LIBRARY};${SUITESPARSE_LIBRARY}")
-    INCLUDE_DIRECTORIES(${METIS_INCLUDE_DIR} ${CHOLMOD_INCLUDE_DIR})
+    INCLUDE_DIRECTORIES(${METIS_INCLUDE_DIR} ${CHOLMOD_INCLUDE_DIR} ${BLAS_INCLUDE_DIR})
     MESSAGE(STATUS "Found Cholmod in " ${CHOLMOD_LIBRARIES})
     MESSAGE(STATUS "Found OpenBlas in " ${OPENBLAS_LIBRARY})
     MESSAGE(STATUS "Found Metis in " ${METIS_LIBRARY})
@@ -510,6 +510,7 @@ IF(ENABLE_POTENTIAL_PARTICLES)
     SET(LINKLIBS  "${LINKLIBS};${OPENBLAS_LIBRARY};${LAPACK_LIBRARY}")
     MESSAGE(STATUS "Found OpenBlas")
     MESSAGE(STATUS "Found Lapack")
+    INCLUDE_DIRECTORIES(${BLAS_INCLUDE_DIR})
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} PotentialParticles")
   ELSE(OPENBLAS_FOUND AND LAPACK_FOUND)
     MESSAGE(STATUS "Missing dependency for PotentialParticles, disabled")
@@ -532,6 +533,7 @@ IF(ENABLE_POTENTIAL_BLOCKS)
     INCLUDE_DIRECTORIES(${CLP_INCLUDE_DIR} ${CLP2_INCLUDE_DIR} )
     SET(LINKLIBS  "${LINKLIBS};${CLP_LIBRARY};${CLP2_LIBRARY};${CLP3_LIBRARY};${OPENBLAS_LIBRARY};${LAPACK_LIBRARY}")
     MESSAGE(STATUS "Found CLP")
+    INCLUDE_DIRECTORIES(${BLAS_INCLUDE_DIR})
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} PotentialBlocks")
   ELSE(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
     MESSAGE(STATUS "CLP NOT found")
