yade --test verifies that library versions from cmake and C++ agree with each other.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,7 +280,9 @@ IF(ENABLE_GUI)
       SET(GUI_LIBS ${GLUT_LIBRARY} ${QGLVIEWER_LIBRARIES})
       SET(GUI_SRC_LIB "lib/opengl/GLUtils.cpp")
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DYADE_OPENGL -DYADE_QT5")
-
+      SET(Used_QT_VERSION_MAJOR ${QT5_VERSION_MAJOR})
+      SET(Used_QT_VERSION_MINOR ${QT5_VERSION_MINOR})
+      SET(Used_QT_VERSION_PATCH ${QT5_VERSION_PATCH})
       MESSAGE(STATUS "Found GUI-Qt5-LIBS")
       SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} GUI-Qt5")
     ELSE(Qt5Widgets_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND GLIB2_FOUND AND QGLVIEWER_FOUND)
@@ -296,6 +298,9 @@ IF(ENABLE_GUI)
       SET(GUI_LIBS ${GLUT_LIBRARY} ${OPENGL_LIBRARY} ${QGLVIEWER_LIBRARIES})
       SET(GUI_SRC_LIB "lib/opengl/GLUtils.cpp")
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DYADE_OPENGL -DYADE_QT4")
+      SET(Used_QT_VERSION_MAJOR ${QT_VERSION_MAJOR})
+      SET(Used_QT_VERSION_MINOR ${QT_VERSION_MINOR})
+      SET(Used_QT_VERSION_PATCH ${QT_VERSION_PATCH})
       INCLUDE_DIRECTORIES(${GLIB2_INCLUDE_DIRS})
       INCLUDE_DIRECTORIES(${QT_INCLUDES})
 
