Rename allVersionsCmake() → getAllVersionsCmake(); allVersionsCpp() → getAllVersionsCpp(); for consitency with naming conventions.

--- a/py/libVersions.py.in
+++ b/py/libVersions.py.in
@@ -30,8 +30,8 @@ def getVersion(libName):
 
 	.. note:: library openblas has no properly defined version in header files, this function will return ``(0,0,0)`` for openblas. Parsing the version string would be unreliable. The mpi version detected by cmake sometimes is different than version detected by C++, this needs further investigation.
 	"""
-	cppVer   = allVersionsCpp()
-	cmakeVer = allVersionsCmake()
+	cppVer   = getAllVersionsCpp()
+	cmakeVer = getAllVersionsCmake()
 	if(libName == 'openblas'):
 		print("Warning: openblas has no properly defined version in header files, the obtained version is ",cppVer[libName])
 	if((libName == 'mpi' ) and (cppVer[libName][0] != cmakeVer[libName][0])):
@@ -43,7 +43,7 @@ def getVersion(libName):
 		return cmakeVer[libName][0]
 	raise RuntimeError("Could not find library version of ",libName)
 
-def allVersionsCmake():
+def getAllVersionsCmake():
 	"""
 	This function returns library versions as provided by cmake during compilation.
 
@@ -56,7 +56,7 @@ def allVersionsCmake():
 	
 	   In [1]: from yade.libVersions import *
 
-	   In [1]: allVersionsCmake()
+	   In [1]: getAllVersionsCmake()
 
 	.. note:: Please add here detection of other libraries when yade starts using them or if you discover how to extract from cmake a version which I didn't add here.
 
@@ -121,8 +121,8 @@ def printAllVersions(rstFormat=False):
 	# there will be three columns: library , cmake , C++
 	headers  = ["library","cmake","C++"]
 	longest  = [None,None,None]
-	cmakeVer = allVersionsCmake()
-	cppVer   = allVersionsCpp()
+	cmakeVer = getAllVersionsCmake()
+	cppVer   = getAllVersionsCpp()
 	namesSet = set()
 	for i in range(3): longest[i] = len(headers[i])
 	for key,val in cmakeVer.items():
